--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 sudo: required
 
+language: bash
+
 services:
 - docker
-language: bash
+
+before_install:
+    - docker pull multiarch/qemu-user-static:register
+    - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+    - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 
 script:
 
@@ -13,35 +19,32 @@ script:
   # Build all images
   - docker build --build-arg PLATFORM=linux-amd64 -t acrelle/infobot:linux-amd64 -f Dockerfile .
   
-  # prepare qemu
-  - docker run --rm --privileged multiarch/qemu-user-static:register --reset
   # get qemu-arm-static binary
-  - mkdir tmp
-  - >
-    pushd tmp &&
-    curl -L -o qemu-arm-static.tar.gz https://github.com/multiarch/qemu-user-static/releases/download/v2.11.1/qemu-arm-static.tar.gz &&
-    tar xzf qemu-arm-static.tar.gz &&
-    popd
+  # - mkdir tmp
+  # - >
+  #   pushd tmp &&
+  #   curl -L -o qemu-arm-static.tar.gz https://github.com/multiarch/qemu-user-static/releases/download/v2.11.1/qemu-arm-static.tar.gz &&
+  #   tar xzf qemu-arm-static.tar.gz &&
+  #   popd
   
-  - docker build --build-arg PLATFORM=linux-arm -t acrelle/infobot:linux-arm -f linux-arm32v7.Dockerfile .
+  # - docker build --build-arg PLATFORM=linux-arm -t acrelle/infobot:linux-arm -f linux-arm32v7.Dockerfile .
 
   - >
 
     if [ -n "$TRAVIS_BUILD_NUMBER" ]; then
       # Push all images
-      travis_retry timeout 5m docker login -u="$DOCKER_USER" -p="$DOCKER_PASS"
       docker tag acrelle/infobot:linux-amd64 acrelle/infobot:${TRAVIS_BUILD_NUMBER}-linux-amd64
-      docker tag acrelle/infobot:linux-arm acrelle/infobot:${TRAVIS_BUILD_NUMBER}-linux-arm
+#      docker tag acrelle/infobot:linux-arm acrelle/infobot:${TRAVIS_BUILD_NUMBER}-linux-arm
 
       # push version for each platform
       docker push acrelle/infobot:${TRAVIS_BUILD_NUMBER}-linux-amd64
-      docker push acrelle/infobot:${TRAVIS_BUILD_NUMBER}-linux-arm
+      #docker push acrelle/infobot:${TRAVIS_BUILD_NUMBER}-linux-arm
 
       # Download manifest-tool
-      wget https://github.com/estesp/manifest-tool/releases/download/v0.7.0/manifest-tool-linux-amd64
-      mv manifest-tool-linux-amd64 manifest-tool
-      chmod +x manifest-tool
-      # Push manifest-list
-      ./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "acrelle/infobot:${TRAVIS_BUILD_NUMBER}-OS-ARCH" --target "acrelle/infobot:$TRAVIS_BUILD_NUMBER"
-      ./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "acrelle/infobot:${TRAVIS_BUILD_NUMBER}-OS-ARCH" --target "acrelle/infobot:latest"
+      # wget https://github.com/estesp/manifest-tool/releases/download/v0.7.0/manifest-tool-linux-amd64
+      # mv manifest-tool-linux-amd64 manifest-tool
+      # chmod +x manifest-tool
+
+      # ./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "acrelle/infobot:${TRAVIS_BUILD_NUMBER}-OS-ARCH" --target "acrelle/infobot:$TRAVIS_BUILD_NUMBER"
+      # ./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "acrelle/infobot:${TRAVIS_BUILD_NUMBER}-OS-ARCH" --target "acrelle/infobot:latest"
     fi
