--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
     tar xzf qemu-arm-static.tar.gz &&
     popd
   
-  - docker build --build-arg PLATFORM=linux-arm -t acrelle/infobot:linux-arm -f linux-arm32v7.Dockerfile .
+  - travis_wait 60 docker build --build-arg PLATFORM=linux-arm -t acrelle/infobot:linux-arm -f linux-arm32v7.Dockerfile .
 
   - >
 
