--- a/.travis.yml
+++ b/.travis.yml
@@ -15,16 +15,17 @@ script:
   - docker build --build-arg PLATFORM=linux-amd64 -t acrelle/infobot:linux-amd64 -f Dockerfile .
   
   # prepare qemu
-  - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+  # - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+  # dissabled 10/5/18 due to travis-ci 50 min build timeout limit
   # get qemu-arm-static binary
-  - mkdir tmp
-  - >
-    pushd tmp &&
-    curl -L -o qemu-arm-static.tar.gz https://github.com/multiarch/qemu-user-static/releases/download/v2.11.1/qemu-arm-static.tar.gz &&
-    tar xzf qemu-arm-static.tar.gz &&
-    popd
+  #- mkdir tmp
+  # #- >
+  #   pushd tmp &&
+  #   curl -L -o qemu-arm-static.tar.gz https://github.com/multiarch/qemu-user-static/releases/download/v2.11.1/qemu-arm-static.tar.gz &&
+  #   tar xzf qemu-arm-static.tar.gz &&
+  #   popd
   
-  - travis_wait 60 docker build --build-arg PLATFORM=linux-arm -t acrelle/infobot:linux-arm -f linux-arm32v7.Dockerfile .
+  # - travis_wait 60 docker build --build-arg PLATFORM=linux-arm -t acrelle/infobot:linux-arm -f linux-arm32v7.Dockerfile .
 
   - >
 
@@ -32,13 +33,13 @@ script:
       # Push all images
       travis_retry timeout 5m docker login -u="$DOCKER_USER" -p="$DOCKER_PASS"
       docker push acrelle/infobot:linux-amd64
-      docker push acrelle/infobot:linux-arm
+      #docker push acrelle/infobot:linux-arm
 
       # Download manifest-tool
-      wget https://github.com/estesp/manifest-tool/releases/download/v0.7.0/manifest-tool-linux-amd64
-      mv manifest-tool-linux-amd64 manifest-tool
-      chmod +x manifest-tool
-      # Push manifest-list
-      ./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "acrelle/infobot:OS-ARCH" --target "acrelle/infobot:$TRAVIS_BUILD_NUMBER"
-      ./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "acrelle/infobot:OS-ARCH" --target "acrelle/infobot:latest"
+      # wget https://github.com/estesp/manifest-tool/releases/download/v0.7.0/manifest-tool-linux-amd64
+      # mv manifest-tool-linux-amd64 manifest-tool
+      # chmod +x manifest-tool
+      # # Push manifest-list
+      # ./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "acrelle/infobot:OS-ARCH" --target "acrelle/infobot:$TRAVIS_BUILD_NUMBER"
+      # ./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "acrelle/infobot:OS-ARCH" --target "acrelle/infobot:latest"
     fi
