--- a/Dockerfile.linux-arm32v7
+++ b/Dockerfile.linux-arm32v7
@@ -1,5 +1,7 @@
-FROM arm32v7/debian
+FROM resin/armv7hf-debian
 LABEL maintainer="anthony@relle.co.uk"
+
+RUN [ "cross-build-start" ]
 
 ADD discord.patch annoying.patch schedulers.patch /tmp/
 
@@ -20,6 +22,8 @@ RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && \
  rm -rf /var/lib/apt/lists/* && \
  chown -R infobot:infobot /home/infobot/infobot-code
  
+RUN [ "cross-build-end" ]
+
 # ports and volumes
 USER infobot
 VOLUME ["/home/infobot/infobot-code/files", "/home/infobot/infobot-code/log" ]
